<resources>
    <string name="app_name">White Goods</string>
    <string name="title_activity_employee_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_manager_nav">MainActivity</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_credentials">Enter Your Credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="inventory">Inventory</string>
    <string name="profile">Profile</string>
    <string name="all_the_details_are_mandatory">All the details are mandatory</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="role">Role</string>
    <string name="employees">Employees</string>
    <string name="requests">Requests</string>
    <string name="discount">Discount</string>
    <string name="logout">Logout</string>
    <string name="phone_no">Phone No</string>
    <string name="user_id">User Id</string>
    <string name="cancelled">Cancelled</string>
    <string name="suspended">Suspended</string>
    <string name="rescheduled">Rescheduled</string>
    <string name="newest">New</string>
    <string name="host_url">http://128.199.30.114:9000</string>
    <string name="location">Location</string>
    <string name="product_name">Product Name</string>
    <string name="request_date">Request Date</string>
    <string name="product_report">Product Report</string>
    <string name="AC">Air Conditioner</string>
    <string name="fridge">Refrigerator</string>
    <string name="oven">Microwave Oven</string>
    <string name="wm">Washing Machine</string>
</resources>