<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="0dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@+id/filter"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/requests"
            android:textColor="@color/font"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/filter"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_filter" />
    </RelativeLayout>


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/elements"
        android:gravity="center">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/newest"
            android:textColor="@color/secondary"
            android:textSize="12sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/rescheduled"
            android:textColor="@color/secondary"
            android:textSize="12sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/suspended"
            android:textColor="@color/secondary"
            android:textSize="12sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/cancelled"
            android:textColor="@color/secondary"
            android:textSize="12sp" />
    </LinearLayout>
    </HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/requestsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/elements"
            android:src="@drawable/ic_baseline_add_24" />

    </FrameLayout>
</LinearLayout>