<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_baseline_arrow_back_24" />

            <ImageButton
                android:id="@+id/saveProfile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_baseline_save_24" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:scaleType="centerInside"
                android:src="@drawable/potrait" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/user_id"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:textColor="@color/font"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:textColor="@color/font" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:textColor="@color/font" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="Phone No"
                android:inputType="phone"
                android:paddingHorizontal="15dp"
                android:textColor="@color/font" />

            <EditText
                android:id="@+id/address"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingHorizontal="15dp"
                android:textColor="@color/font" />

            <EditText
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_location_city_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/city"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:textColor="@color/font" />

            <EditText
                android:id="@+id/pincode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_pin_drop_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/pincode"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:textColor="@color/font" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
